--- a/website/docs/cloud-docs/workspaces/dynamic-provider-credentials/vault-backed/index.mdx
+++ b/website/docs/cloud-docs/workspaces/dynamic-provider-credentials/vault-backed/index.mdx
@@ -45,3 +45,7 @@ These endpoints **do not** need to be publicly exposed as long as your Vault ins
 ### External Vault Policy
 
 If you are using an external Vault instance, you must ensure that your Vault instance has the correct policies setup as detailed in the [External Vault Requirements for Terraform Enterprise](/terraform/enterprise/requirements/data-storage/vault) documentation.
+
+### Additional resources
+
+For a team lead-level comparison of Vault-backed dynamic credentials vs. dynamic provider credentials, read the blog post: [Why use Vault-backed dynamic credentials to secure HCP Terraform infrastructure?](https://www.hashicorp.com/blog/why-use-vault-backed-dynamic-credentials-to-secure-hcp-terraform-infrastructure)
